# csv-containerisation-mongodb

./: .gitignore  README.fr.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  run_git.sh
docker/: Dockerfile
docs/: aws-architecture.fr.md  aws-architecture.md  operations.fr.md  operations.md  security.md  ~$Data_Migration_Project_hhdonglo.pptx
notebooks/: cleaning.ipynb  exploratory.ipynb  mongodb.ipynb
src/csv_containerisation_mongodb/data/: cleaning.py  load_data.py
src/csv_containerisation_mongodb/main/: main.py  pipeline.py
src/csv_containerisation_mongodb/migration/: migration.py
src/csv_containerisation_mongodb/test/: test.py
src/csv_containerisation_mongodb/utils/: file_manager.py
