[project]
name = "csv-containerisation-mongodb"
version = "0.1.0"
description = ""
authors = [
    {name = "hhdonglo",email = "hkdonglo@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "pytest (>=9.0.2,<10.0.0)",
    "pymongo (>=4.15.5,<5.0.0)",
    "ipython (>=9.9.0,<10.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "graphviz (>=0.21,<0.22)"
]

[tool.poetry]
packages = [{include = "csv_containerisation_mongodb", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
